--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -28,6 +28,7 @@ jobs:
             - -exc
             - |
                 cd concourse-app
+                make deps
                 make test
 
         inputs:
