--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -8,28 +8,11 @@ resources:
 
 jobs:
 - name: unit-test
+  public: true
   serial: true
   plan:
   - get: concourse-app
     trigger: true
 
-  - task: unit test
-    config:
-        platform: linux
-
-        image_resource:
-            type: docker-image 
-            source: {repository: golang, tag: "1"}
-
-        run:
-            path: sh
-            args:
-            - -exc
-            - |
-                cd concourse-app
-                make deps
-                make test
-
-        inputs:
-        - name: concourse-app
-
+  - task: unit-test
+    file: concourse-app/ci/tasks/test.yml
